# backerupper

./: .gitignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml  s3upload.py
backerupper/: __main__.py  aws.py  conf.py  eventemitter.py  s3.py
backerupper/sources/: abstract.py  mysqldump.py
backerupper/uploaders/: abstract.py  s3.py
