[build-system]
requires = ["setuptools", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "backerupper"
dependencies = [
    "requests>=2.32",
    "requests-aws4auth~=1.3"
]
dynamic = ["version"]

[tool.setuptools_scm]
write_to = "backerupper/_version.py"
version_scheme = "only-version"
local_scheme = "node-and-date"
