[build-system]
requires = ["setuptools", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "backerupper"
dependencies = [
    "boto3~=1.40"
]
dynamic = ["version"]

[tool.setuptools_scm]
write_to = "backerupper/_version.py"
version_scheme = "only-version"
local_scheme = "node-and-date"
